packages/preview/wut-thesis/0.2.0/README.md
# WUT diploma thesis template

Official template for writing thesis at the Warsaw University of Technology. The
template tries to accomodate all faculties, in case of any inconsistencies with your
local editing guidelines please open an issue in the [project's
repository](https://github.com/fuine/wut-thesis-typst).

## Usage

### Web app

Click the `Create project in app` on the [package website](https://typst.app/universe/package/wut-thesis) to initialize the project from this template on the web app.

### Locally

1. [Install Typst compiler](https://github.com/typst/typst#installation)
2. Run the following command, which will initialize your project in a new directory:
```bash
typst init @preview/wut-thesis
```
3. Go to the project's directory and run the compiler in incremental compilation mode to start working:
```bash
cd wut-thesis
typst watch thesis.typ
```

## Font installation
If you want to compile your thesis with a title page, then you need to install the
appropriate fonts. You can safely ignore this section if you don't need the title page
(e.g., you will be using the one generated by APD).

If you plan to open-source your thesis, please exclude the font files from your
repository. For further information on adding fonts to your project, please refer to the
[Typst documentation](https://typst.app/docs/reference/text/text/#parameters-font).

### Web app
1. Download `PW_Adagio_Slab.zip` from [WUT's intranet](https://intranet.pw.edu.pl/promocja/Shared%20Documents/Identyfikacja%20wizualna/Kroje%20pism) (login with pw.edu.pl outlook credentials).
2. Unzip the archive.
3. Upload font files `Adagio_Slab-Regular.otf` and `Adagio_Slab-Light.otf` to your
   project (you can put them in a subdirectory such as `fonts`).

### Locally
1. Download `PW_Adagio_Slab.zip` from [WUT's intranet](https://intranet.pw.edu.pl/promocja/Shared%20Documents/Identyfikacja%20wizualna/Kroje%20pism) (login with pw.edu.pl outlook credentials).
2. Install `Adagio_Slab` fonts via your operating system. Note that if a compiler is
   working in a watch mode, you must stop it and rerun it.
3. In case of `unknown font family: TeX Gyre Heros` warning you need to install
   this font as well:
    * Download the font archive from
      [here](https://www.gust.org.pl/projects/e-foundry/tex-gyre/heros) (link described
      as `8 OTF files: regular, italic, bold and bold italic and their condensed
      counterparts; a “flat” zip archive, primarily for non-TeXies`).
    * Unzip the archive.
    * Install `texgyreheros-regular.otf` font via your operating system. Restart the
      compiler if it's running in the watch mode.

## Configuration
Follow the comments in the `thesis.typ` to configure your thesis.

### Drafting and printing
* The `draft` variable is used to change the coloring of links, show TODOs (both in the
  thesis and TODO outline), and DRAFT in the header and the title. It should be set to
  `true` until the final version is handed in.

* The `in-print` variable is used to generate a PDF file for physical printing (it adds
  bigger margins on the binding part of the page, changes the numbering placement, and
  turns off coloring of links). It should be set to `false` unless you want to create a
  version of the PDF file for physical print, in which case, set it to `true`. **Please
  set this variable to' false' to prepare a PDF file for the final hand-in (uploading it
  to APD/OneDrive).**

### Title page
By default, the template will generate an appropriate title page (assuming you insert
all the appropriate information under the `titlepage-info` argument and have installed
appropriate fonts). If you don't need the title page (e.g., you will be using the one
generated by APD), then set `titlepage-info: none`.

## How to write using Typst?

`content/tutorial.typ` contains a brief tutorial on the Typst syntax and capabilities.
The dummy thesis contains standard typesetting objects such as basic tables,
figures, code listings, and algorithms. For examples of fully-fledged theses prepared
using this template, you can refer to the following repositories:

- ["Implementation of the de novo genome assembler in the Rust programming language" (engineering thesis)](https://github.com/fuine/eng-thesis-typst/)
- ["Heuristic hyperparameter optimization for neural networks" (master's thesis)](https://github.com/fuine/msc-thesis-typst/)

## Good practices
* Save your generated graphics (e.g., graphs) in the vector form (as `.svg`)
* Consider optimizing your image files, for example by using [`svgo`](https://svgo.dev/), [`jpegoptim`](https://github.com/tjko/jpegoptim), [`oxipng`](https://github.com/oxipng/oxipng) or [`pdfcpu`](https://github.com/pdfcpu/pdfcpu):
    ```bash
    svgo my-file.svg
    jpegoptim my-file.jpg
    oxipng my-file.png
    pdfcpu optimize my-file.pdf
    ```
    Likewise, optimize your thesis file prior to the final hand in, for example by using
    [`pdfcpu`](https://github.com/pdfcpu/pdfcpu):
    ```
    pdfcpu optimize thesis.pdf
    ```

## Accessibility
This template is fully compliant with PDF/UA-1 standard. However, the example thesis
does not compile under this standard, as it lacks `alt` entries in images and math
formulaes. To see more please read [the accessibility guide](https://typst.app/docs/guides/accessibility/).

## Problems and Contributions
In case of any problems/feature requests, please open an issue or PR in the project's
repository.

## License
The template source code and graphics in the `template/images/` directory are distributed under the [MIT0](https://github.com/aws/mit-0/blob/master/MIT-0) license. You are free to use, modify, and distribute it without any warranty.

> [!IMPORTANT]
>
> This project contains the Warsaw University of Technology logo graphic for creating the title page.
>
> Please note: The logo is a Warsaw University of Technology copyright. Except for this template, it should not be used for other purposes.

---

> The dummy thesis, including the sources, was created by generative AI and is simply meant as a placeholder. The content, citations, and data presented are not based on actual research or verified information. They are intended for illustrative purposes only and should not be considered accurate, reliable, or suitable for any academic, professional, or research use. Any resemblance to real persons, living or dead, or actual research, is purely coincidental. Users are advised to replace all placeholder content with genuine, verified data and references before using this material in any formal or academic context.

## Acknowledgements
This template is loosely based on the [not-jku-thesis template](https://typst.app/universe/package/not-jku-thesis).
